# autofile

./: .gitignore  Cargo.toml  IMPLEMENTING_VISION_MODEL.md  README.md  config.example.toml
src/: categorizer.rs  config.rs  detector.rs  main.rs  matcher.rs  mover.rs  organizer.rs  watcher.rs
src/preprocessor/: README.md  VISION_MODEL_GUIDE.md  example_preprocessor.rs.template  heic_converter.rs  image_renamer.rs  mod.rs
src/utils/: file.rs
