[package]
name = "autofile"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
notify-debouncer-full = "0.3"
infer = "0.16"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.13"
