[package]
name = "autofile"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
notify-debouncer-full = "0.3"
infer = "0.16"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
fastembed = "5.4.0"
# Vision model dependencies (optional - for image renaming feature)
# Uncomment when implementing vision model
# candle-core = "0.8"
# candle-nn = "0.8"
# candle-transformers = "0.8"
# tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
# image = "0.25"
# hf-hub = "0.3"

[dev-dependencies]
tempfile = "3.13"
